--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,15 @@
 {
     "license": "proprietary",
     "type": "project",
-    "require-dev": {},
+    "require-dev": {
+        "phpspec/phpspec": "^7.4"
+    },
     "config": {
         "platform": {}
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
