--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,11 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "spec\\": "spec/"
+        }
     }
+
 }
